[gd_scene load_steps=6 format=3 uid="uid://c5evme6xobw51"]

[ext_resource type="Script" uid="uid://drxx1wb5lkx2s" path="res://scripts/npcs/Toaster.gd" id="1_2gbp6"]
[ext_resource type="Texture2D" uid="uid://oids45rwx20u" path="res://assets/sprites/npcs/spr_toaster.png" id="1_nt105"]
[ext_resource type="Script" uid="uid://bfg3hlqx7c7d5" path="res://scripts/components/BounceComponent.gd" id="2_tem0o"]
[ext_resource type="Script" uid="uid://ci8hje5x2xxdi" path="res://scripts/npcs/states/StateMachine.gd" id="4_hhgjn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nt105"]
size = Vector2(20, 3)

[node name="Toaster" type="CharacterBody2D" groups=["npc"]]
script = ExtResource("1_2gbp6")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_nt105")
hframes = 4

[node name="Collider" type="CollisionPolygon2D" parent="."]
position = Vector2(-11, -4)
polygon = PackedVector2Array(-5, -5, -5, 13, 28, 13, 28, -5, 26, -5, 23, 10, 0, 10, -3, -5)

[node name="Trigger" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="Trigger"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_nt105")

[node name="BounceComponent" type="Node" parent="."]
script = ExtResource("2_tem0o")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_hhgjn")

[node name="CarriableComponent" type="Node" parent="."]
